# Churn-Prediction

./: .gitignore  README.md  app.py  eda.ipynb  main.py  model_evaluation.ipynb  model_training.ipynb  notebook.ipynb  pyproject.toml
airflow_docker/: docker-compose.yaml
airflow_docker/dags/: churn_pipeline.py
autoviz_reports/Churn/: cat_var_plots.html  distplots_cats.html  distplots_nums.html  heatmaps.html  (+2 more)
config/: feature_engineering.yaml  model_training_config.yaml  preprocessing_config.yaml
data/: EDA.py  Preprocessed_e-commerce.csv  missing_summary.csv  preprocessed_df.csv  project_metadata.json  required_cols.json  x_test.parquet  x_train.parquet  y_test.parquet  y_train.parquet
eda_reports/: feature_importance.csv  missing_data.csv  outlier_summary.csv  overview.csv  permutation_importance.csv
ml_deploy/: calibrated_model.pkl  main.py  pyproject.toml
ml_evaluation/: data_loader.py  explainability.py  explanability.py  metrics.py  model_loader.py  visualization.py
models/: Decision_Trees_best_model.pkl  Logistic_Regression_best_model.pkl  Random_Forest_best_model.pkl  XGBClassifier_best_model.pkl  feature_names.json  lightgbm_phase1.pkl  lightgbm_phase3.pkl  logistic_regression_phase1.pkl  logistic_regression_phase3.pkl  model_results.json  scalar.pkl
notebooks/: eda.ipynb  model_evaluation.ipynb  model_training.ipynb
results/: feature_importance.csv  selected_features.json  test_metrics.json
src/: EDA.py  EDA_pipeline.py  feature_engineering.py  model_evaluation.py  model_training.py  preprocessing.py  utils.py
tests/: test_utils.py
(+18 files in other folders)
