[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "A machine learning model to predict customer churn"
authors = [
    {name = "Maxwell Selassie",email = "maxwellselassie2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "scikit-learn (==1.7.2)",
    "fastapi (>=0.118.1,<0.119.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "setuptools (==69.5.1)",
    "shap (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

