[project]
name = "churn-prediction"
version = "0.1.0"
description = "A machine learning model that predicts churn"
authors = [
    {name = "Maxwell Selassie Hiamatsu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
